fix(1255): vertically align notification close button in IE11
closes #1255

--- a/src/Notification/Notification.scss
+++ b/src/Notification/Notification.scss
@@ -21,7 +21,10 @@
   right: 12px;
   display: flex;
   align-items: center;
-  height: 100%;
+
+  // because IE11 doesn't vertically align. this doesn't break other
+  // browsers because nested <button> has explicit width/height
+  height: 0;
 }
 
 /*Position*/
